--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="first_rainbow">
-        <table style="border: black 1px dashed;">
+        <table style="border: black 1px dashed;width: 200px;">
             <tr>
                 <td colspan=2>&nbsp;</td>
                 <td style=" font-family: Oswald; color: red; font-weight: bold; font-style: italic; text-decoration:overline;">Каждый</td>
